--- a/public/assets/css/output.css
+++ b/public/assets/css/output.css
@@ -1277,9 +1277,14 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-\[\#565656\] {
+.text-green-600 {
   --tw-text-opacity: 1;
-  color: rgb(86 86 86 / var(--tw-text-opacity));
+  color: rgb(22 163 74 / var(--tw-text-opacity));
+}
+
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 
 .shadow {
